# envguard

./: CHANGELOG.md  DEVELOPMENT.md  QUICKSTART.md  README.md  pre-commit-hooks.yaml  pyproject.toml
.github/workflows/: ci.yml  envguard.yml  publish.yml
envguard/: __init__.py  app.py  auditor.py  cli.py  diff_engine.py  formatter.py  models.py  parser.py  schema.py  utils.py  validator.py
examples/: .env.schema.toml
tests/: __init__.py  test_app.py  test_auditor.py  test_diff_engine.py  test_formatter.py  test_parser.py  test_schema.py  test_setup_ci.py  test_utils.py  test_validator.py
