[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "envguard"
version = "0.1.0"
description = "A production-ready CLI tool for validating and auditing .env files"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Prabhath", email = "Prabhath1403@users.noreply.github.com" }
]
keywords = ["env", "environment", "validation", "audit", "cli", "devops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.scripts]
envguard = "envguard.cli:app"

[project.urls]
Homepage = "https://github.com/Prabhath1403/envguard"
Repository = "https://github.com/Prabhath1403/envguard"
Issues = "https://github.com/Prabhath1403/envguard/issues"
Changelog = "https://github.com/Prabhath1403/envguard/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["envguard*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
